--- a/src/main/resources/templates/authenticated/show-single-alumni.html
+++ b/src/main/resources/templates/authenticated/show-single-alumni.html
@@ -50,6 +50,12 @@
                                 <span class="fa-brands fa-github">
                                 </span>
                                 </a>
+                            </div>
+                            <div class="col-md-3">
+                                <a th:href="@{${'/blog/get/alumni/' + alumniDTO.id}}"
+                                   class="btn flatiron-user btn-primary"
+                                   data-toggle="modal">
+                                    All Blogs
                                 </a>
                             </div>
                         </div>
